// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BoardingPass> renders 1`] = `<View />`;

exports[`<BoardingPass> when {children} 1`] = `<View />`;

exports[`<BoardingPass> when {enabled} 1`] = `
<Text>
  Children component...
</Text>
`;

exports[`<BoardingPass> when {loading} 1`] = `
<Text>
  Loading...
</Text>
`;
